--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,8 +1,8 @@
-<%= form_with model: article do |form| %>
+<%= form_with model: @article do |form| %>
     <div>
       <%= form.label :title %><br>
       <%= form.text_field :title %>
-      <% article.errors.full_messages_for(:title).each do |message| %>
+      <% @article.errors.full_messages_for(:title).each do |message| %>
         <div><%= message %></div>
       <% end %>
     </div>
@@ -10,7 +10,7 @@
     <div>
       <%= form.label :body %><br>
       <%= form.text_area :body %><br>
-      <% article.errors.full_messages_for(:body).each do |message| %>
+      <% @article.errors.full_messages_for(:body).each do |message| %>
         <div><%= message %></div>
       <% end %>
     </div>
@@ -18,12 +18,6 @@
     <%= form.label :status %><br>
     <%= form.select :status, ['public', 'private', 'archived'], selected: 'public' %>
     </div>
-    <p>
-        <%= form.label :status %><br>
-        <%= form.select :status, ['public', 'private', 'archived'], selected: 'public' %>
-    </p>
-
-  
     <div>
       <%= form.submit %>
     </div>
