--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,25 +1,33 @@
-<%= form_with model: @article do |form| %>
-    <div>
-      <%= form.label :title %><br>
-      <%= form.text_field :title %>
-      <% @article.errors.full_messages_for(:title).each do |message| %>
-        <div><%= message %></div>
+
+<%= form_with model: @article, remote: true do |form| %>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-10">
+        <div>
+          <%= form.label :title %><br>
+          <%= form.text_field :title %>
+          <% @article.errors.full_messages_for(:title).each do |message| %>
+            <div><%= message %></div>
+          <% end %>
+          <br>
+          <%= form.label :body %><br>
+          <%= form.text_area :body %><br>
+          <% @article.errors.full_messages_for(:body).each do |message| %>
+            <div><%= message %></div>
+          <% end %>
+        </div>
+        <div role="button" aria-disabled="true">
+        <%= form.label :status %><br>
+        <%= form.select :status, ['produto', 'serviço'], selected: 'public' %>
+      </div>
+      <br>
+      <div class="btn-group" role="group" aria-label="Basic example">
+      <a href="/#">
+        <button type="button" class="btn btn-secondary">Voltar</button>
+      </a>
+      </div>
+      <%= form.submit 'Enviar', class:"btn btn-secondary" %>
       <% end %>
     </div>
-  
-    <div>
-      <%= form.label :body %><br>
-      <%= form.text_area :body %><br>
-      <% @article.errors.full_messages_for(:body).each do |message| %>
-        <div><%= message %></div>
-      <% end %>
-    </div>
-    <div>
-    <%= form.label :status %><br>
-    <%= form.select :status, ['public', 'private', 'archived'], selected: 'public' %>
-    </div>
-    <div>
-      <%= form.submit %>
-    </div>
-  <% end %>
-  
+  </div>
+</div>
